--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "expect"
+name = "example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "example",
-]
-
-
 [dependencies]
+expect = { git = "https://github.com/ishibashi-futos/expect-rust", branch = "main" }
