--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "expect_rs"
 version = "0.0.1"
 edition = "2021"
+license-file = "LICENSE"
+authors = [
+    "ishibashi-futoshi <ishibashi.futos@outlook.com>"
+]
+description = "This is the jest expect like matcher."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
